--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.50.0"
+  },
+  "dependencies": {
+    "swiper": "^8.1.1"
   }
 }
